--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         More than 50 Companies and Institutions that trust us over<br> the years
       </h1>
     </div>
-    <div class="container mt-5">
+    <div class="container mt-5 theNewPartener">
       <div class="partners-grid mt-5">
         <div class="partner"><img src="assets/microsoft.png" alt="Microsoft"></div>
         <div class="partner"><img src="assets/saveTheChildren.png" alt="Save the Children"></div>
